# Spacegasm

./: .gitignore  CMakeLists.txt  README.md  Spacegasm.cbp  Spacegasm.depend  Spacegasm.workspace  client_main.cpp
Data/: howto.txt
Data/GUI/: .serverLobby.html.swp  serverLobby.html~
Data/Lang/: en.xml
Data/Libraries_linux64/: libGLEW.so.1.5  libsfml-audio.so.2.0  libsfml-graphics.so.2.0  libsfml-network.so.2.0  libsfml-system.so.2.0  libsfml-window.so.2.0
Data/Libraries_win32/: windows_update.bat
Data/Script/: backgroundMusic.lua  config.lua  config.lua_default  fixtures.lua
Data/Sounds/: applyPowerup.flac  asteroidHit.flac  button.flac  explosion.flac  laserShot.flac  powerup.flac
Data/Textures/: Spaceship1.xml  Thumbs.db
Data/Textures/Development/: 5x5 32x32 LootSheet1.xcf  5x5 32x32 Spritesheet Pattern.xcf  5x5 32x32 Transparent Spritesheet Pattern.xcf  Gui.xcf  HowTo.xcf  LootSheet.xcf  MeteorSheet1.xcf  MeteorSheet2.xcf  Powerups.xcf  SFML Sidescroller Logo.xcf  Thumbs.db  f2.xcf  f3.xcf  shift.xcf  (+2 more)
Homepage/: .project  download.php  index.php  viewScores.php
Server/: Spacegasm.cbp  Spacegasm.depend  serverConf.xml  server_main.cpp
Server/include/: CChatManager.h  CContactListener.h  CPeerManager.h  CPhysicsManagerServer.h  CPlayerManager.h  CServer.h  CServerConfig.h  CWorldLoop.h
Server/src/: CChatManager.cpp  CConfig.cpp  CContactListener.cpp  CPeerManager.cpp  CPhysicsManagerServer.cpp  CPlayerManager.cpp  CWorldLoop.cpp
Tools/: setup_linux64.sh  setup_postgreSQL.sh
doxygen/: sidescroller
include/: .CGame.h.swo  CGUIManager.h  CGame.h  CNetworkManager.h  CPacketHandler.h  CPacketSender.h  CPhysicsManager.h  CPhysicsManagerClient.h  CPlayerData.h  CRWidget.h  CSingleton.h  CStringContainer.h  CStringExt.h  CTexture.h  CTextureManager.h  CWebViewDrawable.h  IPConverter.h
include/Components/: .Graphics.h.swp  Graphics.h  Physics.h  Position.h
include/CreationUI/: CRContainerWidget.h  CREvent.h  CRMouseEvent.h  CRTextEntered.h  CRWidget.h  CRWindow.h  CreationUI.h
include/Packets/: physUpdate.h
include/Systems/: PhysicNet.h  Physics.h  Render.h
include/Windows/: ConnectToServer.h  Default.h  MainMenu.h  ServerConnection.h
src/: CContactListener.cpp  CGUIManager.cpp  CNetworkManager.cpp  CPacketHandler.cpp  CPhysicsManagerClient.cpp  CPlayerData.cpp  CRWidget.cpp  CStringContainer.cpp  CStringExt.cpp  CTexture.cpp  CTextureManager.cpp  CWebViewDrawable.cpp  Component.cpp  ComponentType.cpp  ComponentTypeManager.cpp  DelayedEntityProcessingSystem.cpp  DelayedEntitySystem.cpp  Entity.cpp  EntityManager.cpp  EntityProcessingSystem.cpp  EntitySystem.cpp  GroupManager.cpp  IPConverter.cpp  SystemBitManager.cpp  SystemManager.cpp  TagManager.cpp  World.cpp
src/CGame/: .onInit.cpp.swo  CGame.cpp  onEvent.cpp  onExit.cpp  onInit.cpp  onRender.cpp  onUpdate.cpp
src/Components/: .Graphics.cpp.swp  Graphics.cpp  Physics.cpp  Position.cpp
src/CreationUI/: CRContainerWidget.cpp  CREvent.cpp  CRMouseEvent.cpp  CRTextEntered.cpp  CRWidget.cpp  CRWindow.cpp  CreationUI.cpp
src/Packets/: physUpdate.cpp
src/Systems/: PhysicNet.cpp  Physics.cpp  Render.cpp
src/Windows/: ConnectToServer.cpp  Default.cpp  MainMenu.cpp  ServerConnection.cpp
(+18 files in other folders)
